--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <section>
-    <span class="copyright">© 2016, <a href="/imprint/">{{site.owner}}</a></span>
+    <span class="copyright">© 2016-2017, <a href="/imprint/">{{site.owner}}</a></span>
     <ul class="footer-links">
       {% for item in site.data.footer_menu %}
         <li>
