--- a/_sass/components/_sponsors.scss
+++ b/_sass/components/_sponsors.scss
@@ -1,5 +1,5 @@
 #sponsors {
-  @include linear-gradient(to right, $brand_green, $brand_blue);
+  @include linear-gradient(to right, $brand_purple, $brand_blue);
 }
 .sponsors {
   color: white;
