--- a/_sass/components/_sponsors.scss
+++ b/_sass/components/_sponsors.scss
@@ -1,6 +1,9 @@
 #sponsors {
   @include linear-gradient(to right, $brand_purple, $brand_blue);
 }
+#call-for-proposals {
+  @include linear-gradient(to right, $brand_purple, $brand_blue);
+}
 .sponsors {
   color: white;
   margin: 0;
