add sponsorship packages

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,6 +10,7 @@
   "components/schedule",
   "components/home",
   "components/sponsors",
+  "components/sponsor-packages",
   "components/ml_form",
   "components/blog",
   "components/tickets",
