Responsively embed youtube
This should make the site a lot nicer on mobile.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,7 +14,8 @@
   "components/ml_form",
   "components/blog",
   "components/tickets",
-  "components/footer"
+  "components/footer",
+  "components/embed"
 ;
 
 .desc {
