Fixes build and adds facebook icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,9 @@
         <li>
           <a href="https://github.com/{{ site.github_username }}">{% include icons/github.svg %}</a>
         </li>
+        <li>
+          <a href="https://facebook.com/{{ site.facebook_username }}">{% include icons/facebook.svg %}</a>
+        </li>
       </ul>
     </div>
   </section>
