Add link for manish's talk

--- a/_includes/_schedule.html
+++ b/_includes/_schedule.html
@@ -27,7 +27,7 @@
       <tr>
         <td class="time">09<span>00</span></td>
         <td>
-          <a href="/talks/">
+          <a href="/talks/#open-as-in-welcoming-facilitating-contributions">
             <strong>Keynote:</strong> "Open" as in "Welcoming": Facilitating Contributions
           </a>
           <div class='speaker'>
