--- a/_includes/_schedule.html
+++ b/_includes/_schedule.html
@@ -7,6 +7,38 @@
 
 <div class='schedule'>
   <section>
+
+    <h2 class="title">Saturday, 29th April</h2>
+    <span style="margin-left: 3em; font-style: italic">aka "Workshop day"</span>
+    <table cellspacing='0'>
+      <tr>
+        <td class="time">11<span>00</span><br>-<br> 16<span>00</span></td>
+        <td class="workshops">
+          <span style="font-weight: bold">Workshops &amp; Hacking</span>
+          <p>
+            Workshops will be in the Conference rooms of the <a href="https://goo.gl/maps/Hc3NrdRjarj">President Hotel</a>.
+          </p>
+          <ul>
+            <li>
+              🌉 RustBridge (English)
+            </li>
+
+            <li>
+              🌉 RustBridge (Russian)
+            </li>
+
+            <li>
+              🕸 Web and Networking (English)
+            </li>
+
+            <li>
+              🔐 Developing a cryptocurrency from scratch on top of Exonum (English)
+            </li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+
     <h2 class="title">Sunday, 30th April</h2>
     <span style="margin-left: 3em; font-style: italic">aka "Talks, Talks, Talks"</span>
     <table cellspacing='0'>
@@ -187,27 +219,5 @@
         <td class="centered">Closing</td>
       </tr>
     </table>
-
-<!--
-    <h2 class="title">Saturday, 29th April</h2>
-    <span style="margin-left: 3em; font-style: italic">aka "Workshop day"</span>
-    <table cellspacing='0'>
-      <tr>
-        <td class="time">11<span>00</span><br>-<br> 16<span>00</span></td>
-        <td class="workshops">
-          <span style="font-weight: bold">Workshops &amp; Hacking</span>
-          <ul>
-            <li>
-              Web Workshop
-            </li>
-
-            <li>
-              Rust Bridge
-            </li>
-          </ul>
-        </td>
-      </tr>
-    </table>
--->
   </section>
 </div>
