Add edunham's talk

--- a/_includes/_schedule.html
+++ b/_includes/_schedule.html
@@ -173,7 +173,7 @@
       <tr>
         <td class="time">17<span>00</span></td>
         <td>
-          <a href="/talks/">
+          <a href="/talks/#spreading-the-rust">
             <strong>Keynote:</strong> Spreading The Rust
           </a>
           <div class='speaker'>
