Add proper description where to go.

--- a/_includes/_schedule.html
+++ b/_includes/_schedule.html
@@ -8,6 +8,7 @@
 <div class='schedule'>
   <section>
 
+<!--
     <h2 class="title">Saturday, 29th April</h2>
     <span style="margin-left: 3em; font-style: italic">aka "Workshop day"</span>
     <table cellspacing='0'>
@@ -38,9 +39,19 @@
         </td>
       </tr>
     </table>
+-->
+
 
     <h2 class="title">Sunday, 30th April</h2>
     <span style="margin-left: 3em; font-style: italic">aka "Talks, Talks, Talks"</span>
+
+  <p>
+    <strong>Location:</strong>
+
+    Mercur Congress Center @ <a href="http://cosmopolite-kiev.com/">Cosmopolite Kyiv</a>.
+    <br>
+    Take the entrance to the cinema and take the lift to the 5th floor.
+  </p>
     <table cellspacing='0'>
       <tr>
         <td class="time">08<span>00</span></td>
