--- a/_includes/_schedule.html
+++ b/_includes/_schedule.html
@@ -86,8 +86,8 @@
             The Illustrated Adventure Survival Guide for New Rustaceans
           </a>
           <div class='speaker'>
-            <img src="/assets/speakers/liz.jpg" />
-            Liz Baillie
+            <img src="/assets/speakers/lee.jpg" />
+            Lee Baillie
           </div>
         </td>
       </tr>
